--- a/web/src/app/common/component/reference-select/reference-select.component.html
+++ b/web/src/app/common/component/reference-select/reference-select.component.html
@@ -1,3 +1,4 @@
+<div>Select reference</div>
 <mat-action-list>
   <button mat-list-item (click)="select(null)">[Empty]</button>
   <button mat-list-item *ngFor="let reference of references" (click)="select(reference.id)">{{reference.name}}</button>
