--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -1,4 +1,41 @@
+.import-data {
+  display: grid;
+  grid-auto-flow: row;
+  margin-bottom: 1em;
+}
+
+.import-data-entries {
+  display: grid;
+  grid-auto-flow: row;
+  grid-gap: 1em;
+}
+
+.date-group {
+  display: grid;
+
+  grid-template-columns: 50% 50%;
+  grid-template-rows: min-content 1fr;
+}
+
 .line {
   display: grid;
   grid-template-columns: min-content 1fr;
+}
+
+.date {
+  grid-column: 1 / span 2;
+  justify-self: center;
+}
+
+.entry-imported {
+  text-decoration: line-through;
+  opacity: .5;
+}
+
+.entry-out {
+  color: red;
+}
+
+.entry-in {
+  color: green;
 }
