Add document functionality

--- a/web/src/app/common/component/edit-toolbar/edit-toolbar.component.html
+++ b/web/src/app/common/component/edit-toolbar/edit-toolbar.component.html
@@ -1,9 +1,9 @@
 <mat-card>
   <div class="title">{{title}}</div>
-  <button mat-icon-button (click)="save.emit()" color="primary">
+  <button mat-icon-button (click)="doSave()">
     <mat-icon>done</mat-icon>
   </button>
-  <button mat-icon-button (click)="close.emit()" color="primary">
+  <button mat-icon-button (click)="doClose()">
     <mat-icon>close</mat-icon>
   </button>
 </mat-card>
