--- a/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
+++ b/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
@@ -1,4 +1,4 @@
-<edit-toolbar title="Import" (save)="save()" (close)="close()"></edit-toolbar>
+<edit-toolbar title="Import" [save]="save"></edit-toolbar>
 
 <mat-card>
 
