--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -1,4 +1,4 @@
-<edit-toolbar title="Import" (save)="save()" (close)="close()"></edit-toolbar>
+<edit-toolbar title="Import"></edit-toolbar>
 
 <mat-card class="import-data">
 
