--- a/web/src/app/document/component/document-income/document-income.component.html
+++ b/web/src/app/document/component/document-income/document-income.component.html
@@ -17,8 +17,8 @@
     </mat-form-field>
 
     <mat-form-field>
-      <mat-label>Expense category</mat-label>
-      <reference-input api="/expense/reference" formControlName="expenseCategory"></reference-input>
+      <mat-label>Income category</mat-label>
+      <reference-input api="/income/reference" formControlName="incomeCategory"></reference-input>
     </mat-form-field>
 
     <mat-form-field>
