--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -10,32 +10,22 @@
   grid-gap: 1em;
 }
 
-.date-group {
-  display: grid;
-
-  grid-template-columns: 50% 50%;
-  grid-template-rows: min-content 1fr;
-}
-
-.line {
-  display: grid;
-  grid-template-columns: min-content 1fr;
-}
-
-.date {
-  grid-column: 1 / span 2;
-  justify-self: center;
-}
-
 .entry-imported {
   text-decoration: line-through;
   opacity: .5;
 }
 
-.entry-out {
-  color: red;
+.line {
+  display: grid!important;
+  grid-template-columns: 2.5em 50% 50%;
+  align-items: center;
+
+  mat-checkbox {
+    justify-self: center;
+  }
 }
 
-.entry-in {
-  color: green;
+.suggested {
+  cursor: pointer;
+  user-select: none;
 }
