Added perform import functionality

--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -29,3 +29,14 @@
   cursor: pointer;
   user-select: none;
 }
+
+.success {
+  color: green;
+  justify-self: center;
+}
+
+.fail {
+  color: red;
+  justify-self: center;
+}
+
