--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -27,7 +27,12 @@
         <h2 matSubheader>{{dateGroup.date}}</h2>
         <mat-list-item *ngFor="let entry of dateGroup.entries">
           <div matLine class="line">
-            <mat-checkbox></mat-checkbox>
+<!--            <mat-checkbox *ngIf="entry.state == 'none'" [(ngModel)]="entry.selected"></mat-checkbox>-->
+<!--            <mat-icon *ngIf="entry.state == 'success'" (click)="entry.state = 'none'" class="success">check_circle</mat-icon>-->
+<!--            <mat-icon *ngIf="entry.state == 'fail'" (click)="entry.state = 'none'" class="fail">cancel</mat-icon>-->
+            <mat-checkbox *ngIf="entry.state == 'none'" [(ngModel)]="entry.selected"></mat-checkbox>
+            <mat-icon *ngIf="entry.state == 'success'" (click)="entry.state = 'none'" class="success">check_circle</mat-icon>
+            <mat-icon *ngIf="entry.state == 'fail'" (click)="entry.state = 'none'" class="fail">cancel</mat-icon>
             <document-label matRipple
                             [matRippleColor]="'#00000020'"
                             class="suggested"
