--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -1,7 +1,21 @@
+:host {
+  display: grid;
+  grid-gap: 1em;
+}
+
+.toolbar {
+  display: grid;
+  grid-template-columns: 1fr min-content min-content;
+  align-items: center;
+
+  .title {
+    font-size: 1.5em;
+  }
+}
+
 .import-data {
   display: grid;
   grid-auto-flow: row;
-  margin-bottom: 1em;
 }
 
 .import-data-entries {
@@ -17,7 +31,7 @@
 
 .line {
   display: grid!important;
-  grid-template-columns: 2.5em 50% 50%;
+  grid-template-columns: 2.5em minmax(0,50%) 50%;
   align-items: center;
 
   mat-checkbox {
