--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,18 +1,17 @@
-<!--<h1>Template app</h1>-->
-<!--<div>{{message}}</div>-->
-<!--<div>{{version}}</div>-->
-
-<!--<form>-->
-
-<!--  <mat-form-field>-->
-<!--    <amount-input></amount-input>-->
-<!--  </mat-form-field>-->
-
-<!--</form>-->
-
-<mat-toolbar color="primary"></mat-toolbar>
+<mat-toolbar color="primary">
+  <button mat-icon-button (click)="left.toggle()"><mat-icon>menu</mat-icon></button>
+  <div class="app-title" [routerLink]="['/']">Finance Manager</div>
+  <div class="app-version">{{version}}</div>
+</mat-toolbar>
 <mat-sidenav-container>
-  <mat-sidenav #left class="left-side"></mat-sidenav>
+  <mat-sidenav #left position="start" class="left-side">
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="['reference']" (click)="left.close()">Reference</a>
+      <a mat-list-item [routerLink]="['document']" (click)="left.close()">Document</a>
+      <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
+      <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
+    </mat-nav-list>
+  </mat-sidenav>
   <mat-sidenav-content class="content">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
