--- a/web/src/app/reference/component/account-editor/account-editor.component.html
+++ b/web/src/app/reference/component/account-editor/account-editor.component.html
@@ -1,5 +1,5 @@
 <mat-card class="toolbar">
-  <div class="title">Expense Category</div>
+  <div class="title">Account</div>
   <button mat-icon-button (click)="save()" [disabled]="!form.valid">
     <mat-icon>done</mat-icon>
   </button>
