--- a/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
+++ b/web/src/app/import-data/component/import-data-begin/import-data-begin.component.html
@@ -1,8 +1,16 @@
-<edit-toolbar title="Import" [save]="save"></edit-toolbar>
+<mat-card class="toolbar">
+  <div class="title">Import</div>
+  <button mat-icon-button (click)="save()" [disabled]="!form.valid">
+    <mat-icon>done</mat-icon>
+  </button>
+  <button mat-icon-button (click)="close()">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-card>
 
 <mat-card>
 
-  <form [formGroup]="importData">
+  <form [formGroup]="form">
 
     <mat-form-field>
       <mat-label>Account</mat-label>
