--- a/web/src/app/import-data/component/import-data-begin/import-data-begin.component.scss
+++ b/web/src/app/import-data/component/import-data-begin/import-data-begin.component.scss
@@ -1,10 +1,16 @@
-.file-field {
+:host {
   display: grid;
-  grid-template-columns: min-content min-content;
+  grid-gap: 1em;
 }
 
-.file-input {
-  display: none;
+.toolbar {
+  display: grid;
+  grid-template-columns: 1fr min-content min-content;
+  align-items: center;
+
+  .title {
+    font-size: 1.5em;
+  }
 }
 
 form {
