Fixed found issues

--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -3,7 +3,7 @@
   <mat-card class="toolbar">
     <div class="title">Import</div>
     <button mat-icon-button (click)="reCreate()">
-      <mat-icon></mat-icon>
+      <mat-icon>refresh</mat-icon>
     </button>
     <button mat-icon-button (click)="save()">
       <mat-icon>done</mat-icon>
