Added stat data to import

--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -32,6 +32,12 @@
 
   </mat-card>
 
+  <mat-card>
+    <mat-card-content>
+      <p>Suggested documents: {{suggestedDocumentCount}} / {{allDocumentCount}}</p>
+    </mat-card-content>
+  </mat-card>
+
   <mat-card class="import-data-entries">
 
     <mat-list>
