--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.scss
@@ -13,6 +13,13 @@
   }
 }
 
+.help-card {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-gap: 1em;
+  align-items: center;
+}
+
 .import-data {
   display: grid;
   grid-auto-flow: row;
