--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -47,7 +47,7 @@
       <ng-container *ngFor="let dateGroup of dateGroups">
         <h2 matSubheader>{{dateGroup.date}}</h2>
         <ng-container *ngFor="let entry of dateGroup.entries">
-          <mat-list-item *ngIf="hideImported && !(entry.suggested && entry.existed)">
+          <mat-list-item *ngIf="!hideImported || !(entry.suggested && entry.existed)">
             <div matLine class="line">
               <mat-checkbox *ngIf="entry.state == 'none'" [(ngModel)]="entry.selected" [disabled]="!entry.suggested"></mat-checkbox>
               <mat-icon *ngIf="entry.state == 'success'" (click)="entry.state = 'none'" class="success">check_circle</mat-icon>
