--- a/web/src/app/reference/component/income-category-editor/income-category-editor.component.html
+++ b/web/src/app/reference/component/income-category-editor/income-category-editor.component.html
@@ -22,7 +22,8 @@
       <textarea matInput
                 formControlName="patterns"
                 cdkTextareaAutosize
-                #autosize="cdkTextareaAutosize"></textarea>
+                #autosize="cdkTextareaAutosize"
+                cdkAutosizeMaxRows="10"></textarea>
     </mat-form-field>
 
   </form>
