--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <button mat-icon-button (click)="left.toggle()"><mat-icon>menu</mat-icon></button>
-  <a class="app-title" href="/">Finance Manager</a>
+  <a class="app-title" href="/finance-manager">Finance Manager</a>
   <div class="app-version">{{version}}</div>
 </mat-toolbar>
 <mat-sidenav-container>
