--- a/web/src/app/document/component/document-browser/document-browser.component.html
+++ b/web/src/app/document/component/document-browser/document-browser.component.html
@@ -2,13 +2,13 @@
   <mat-list>
     <mat-list-item *ngFor="let document of documents">
       <div matLine class="mat-line-with-menu">
-        {{document.date}} {{document.type}}
+        <document-label [document]="document"></document-label>
         <button mat-icon-button [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu>
-          <button mat-menu-item (click)="edit(document.id)">Edit</button>
-          <button mat-menu-item (click)="delete(document.id)">Delete</button>
+          <button mat-menu-item (click)="edit(document.value.id)">Edit</button>
+          <button mat-menu-item (click)="delete(document.value.id)">Delete</button>
         </mat-menu>
       </div>
     </mat-list-item>
