--- a/web/src/app/import-data/component/import-data-view/import-data-view.component.html
+++ b/web/src/app/import-data/component/import-data-view/import-data-view.component.html
@@ -52,11 +52,13 @@
               <mat-checkbox *ngIf="entry.state == 'none'" [(ngModel)]="entry.selected" [disabled]="!entry.suggested"></mat-checkbox>
               <mat-icon *ngIf="entry.state == 'success'" (click)="entry.state = 'none'" class="success">check_circle</mat-icon>
               <mat-icon *ngIf="entry.state == 'fail'" (click)="entry.state = 'none'" class="fail">cancel</mat-icon>
-              <document-label matRipple
+              <document-label [hideAccount]="true"
+                              [hideDate]="true"
+                              [document]="entry.suggested"
+                              matRipple
                               [matRippleColor]="'#00000020'"
                               class="clickable"
                               *ngIf="entry.suggested"
-                              [document]="entry.suggested"
                               [mat-menu-trigger-for]="menu"></document-label>
               <div matRipple
                    [matRippleColor]="'#00000020'"
@@ -64,11 +66,13 @@
                    *ngIf="!entry.suggested"
                    [mat-menu-trigger-for]="menu"
                    [matTooltip]="entry.source">{{entry.source}}</div>
-              <document-label matRipple
+              <document-label [hideAccount]="true"
+                              [hideDate]="true"
+                              [document]="entry.existed"
+                              matRipple
                               [matRippleColor]="'#00000020'"
                               class="clickable"
                               *ngIf="entry.existed"
-                              [document]="entry.existed"
                               (click)="viewDocument(entry.existed)"></document-label>
               <div *ngIf="!entry.existed"></div>
               <mat-menu #menu>
