--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -19,6 +19,6 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-<div class="loading" *ngIf="loading()">
+<div class="loading" *ngIf="loading">
   <mat-spinner></mat-spinner>
 </div>
