--- a/web/src/app/document/component/document-browser/document-browser.component.html
+++ b/web/src/app/document/component/document-browser/document-browser.component.html
@@ -1,6 +1,45 @@
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>Filters</mat-panel-title>
+  </mat-expansion-panel-header>
+
+  <form [formGroup]="filter">
+    <mat-form-field>
+      <mat-label>From</mat-label>
+      <input formControlName="dateFrom" matInput [matDatepicker]="from" readonly (click)="from.open()">
+      <mat-datepicker touchUi #from></mat-datepicker>
+      <button mat-icon-button matSuffix (click)="filter.patchValue({dateFrom: null})">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>To</mat-label>
+      <input formControlName="dateTo" matInput [matDatepicker]="to" readonly (click)="to.open()">
+      <mat-datepicker touchUi #to></mat-datepicker>
+      <button mat-icon-button matSuffix (click)="filter.patchValue({dateTo: null})">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Type</mat-label>
+      <mat-select formControlName="type">
+        <mat-option *ngFor="let type of types" [value]="type.value">{{type.label}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Account</mat-label>
+      <reference-input api="/account/reference" formControlName="account"></reference-input>
+    </mat-form-field>
+  </form>
+
+</mat-expansion-panel>
+
 <mat-card>
   <mat-list>
-    <mat-list-item *ngFor="let document of documents">
+    <mat-list-item *ngFor="let document of filteredDocuments">
       <div matLine class="mat-line-with-menu">
         <document-label [document]="document"></document-label>
         <button mat-icon-button [matMenuTriggerFor]="menu">
