--- a/web/src/app/document/component/document-browser/document-browser.component.scss
+++ b/web/src/app/document/component/document-browser/document-browser.component.scss
@@ -1,3 +1,14 @@
+:host {
+  display: grid;
+  grid-gap: 1em;
+}
+
+form {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr 1fr;
+}
+
 .select {
   position: fixed;
   top: 0;
@@ -5,6 +16,7 @@
   display: grid;
   width: 100%;
   height: 100%;
+  background-color: #00000070;
 
   mat-card {
     justify-self: center;
