--- a/web/src/app/document/component/document-exchange/document-exchange.component.html
+++ b/web/src/app/document/component/document-exchange/document-exchange.component.html
@@ -20,8 +20,7 @@
 
     <mat-form-field>
       <mat-label>Date</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="date">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <input matInput [matDatepicker]="picker" formControlName="date" (click)="picker.open()" readonly>
       <mat-datepicker touchUi #picker></mat-datepicker>
     </mat-form-field>
 
