--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -10,6 +10,7 @@
       <a mat-list-item [routerLink]="['expense']" (click)="left.close()">Expense</a>
       <a mat-list-item [routerLink]="['income']" (click)="left.close()">Income</a>
       <mat-divider></mat-divider>
+      <a mat-list-item [routerLink]="['dashboard']" (click)="left.close()">Dashboard</a>
       <a mat-list-item [routerLink]="['document']" (click)="left.close()">Document</a>
       <a mat-list-item [routerLink]="['import-data']" (click)="left.close()">Import</a>
       <a mat-list-item [routerLink]="['settings']" (click)="left.close()">Settings</a>
