--- a/web/src/app/document/component/document-browser/document-browser.component.html
+++ b/web/src/app/document/component/document-browser/document-browser.component.html
@@ -3,12 +3,12 @@
     <mat-panel-title>Filters</mat-panel-title>
   </mat-expansion-panel-header>
 
-  <form [formGroup]="filter">
+  <form [formGroup]="filter()">
     <mat-form-field>
       <mat-label>From</mat-label>
       <input formControlName="dateFrom" matInput [matDatepicker]="from" readonly (click)="from.open()">
       <mat-datepicker touchUi #from></mat-datepicker>
-      <button mat-icon-button matSuffix (click)="filter.patchValue({dateFrom: null})">
+      <button mat-icon-button matSuffix (click)="filter().patchValue({dateFrom: null})">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
@@ -17,7 +17,7 @@
       <mat-label>To</mat-label>
       <input formControlName="dateTo" matInput [matDatepicker]="to" readonly (click)="to.open()">
       <mat-datepicker touchUi #to></mat-datepicker>
-      <button mat-icon-button matSuffix (click)="filter.patchValue({dateTo: null})">
+      <button mat-icon-button matSuffix (click)="filter().patchValue({dateTo: null})">
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
